# parallamr

./: .env.example  .gitignore  .implementation-status.md  .roomodes  CHANGELOG.md  CI_CD_AUTOMATION.md  EDGE_CASES_ERROR_HANDLING.md  FACTORY_ARCHITECTURE_DIAGRAM.md  FACTORY_IMPLEMENTATION_SUMMARY.md  FACTORY_TEST_TEMPLATES.md  ImplementFlatten.md  OPENAI_COMPATIBILITY_ANALYSIS.md  OPENAI_PROVIDER_ARCHITECTURE.md  PARALLEL_PROCESSING_HANDOFF.md  PARALLEL_PROCESSING_TEST_STRATEGY.md  QA_REPORT_FOR_QUEEN.md  README.md  RESEARCH_REPORT.md  TDD_CLI_FACTORY_DESIGN.md  TESTING_PROGRESS.md  TESTING_STRATEGY.md  TEST_FIXTURES_SPEC.md  TEST_IMPLEMENTATION_GUIDE.md  issues.txt  parallaxr-spec.md  pyproject.toml  test_core.py  test_implementation.py  test_parallel_execution.py
.claude/: settings.json
.claude-flow/hive-mind/: memory.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.devcontainer/: devcontainer.json
analysis-reports/: code-quality-refactoring-analysis.md  hive-mind-consensus-synthesis.md  testing-coverage-analysis.md  testing-strategy-comprehensive.md  testing-strategy-executive-summary.md
src/parallamr/: __init__.py  cli.py  csv_writer.py  file_loader.py  json_extractor.py  models.py  path_template.py  runner.py  token_counter.py  utils.py
src/parallamr/providers/: __init__.py  mock.py  ollama.py  openai.py  openrouter.py
src/parallaxr/: __init__.py  cli.py  csv_writer.py  models.py  template.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_factory.py  test_csv_writer.py  test_csv_writer_parallel.py  test_file_loader.py  test_flatten_integration.py  test_json_extractor.py  test_models.py  test_ollama_provider.py  test_openai_provider.py  test_openrouter_provider.py  test_path_template.py  test_provider_registry.py  test_providers.py  test_runner.py  test_session_injection.py  test_template.py  test_templated_inputs.py  test_token_counter.py  test_utils.py
tests/fixtures/: __init__.py  common_responses.py  context.txt  experiments.csv  ollama_responses.py  openai_responses.py  openrouter_responses.py  prompt.txt
(+2 files in other folders)
